tests/expectations/compiler/function/too_many_transitions_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372047]: The number of transitions exceeds the maximum. snarkVM allows up to 31 transitions within a single program.
    --> compiler-test:1:1
     |
   1 | 
   2 | 
   3 | program test.aleo {
     | ^^^^^^^^^^^^
"""]
